--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,8 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
 
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
+
+packageExtensions:
+  'styled-components@*':
+    dependencies:
+      'react-is': '^18.2.0'
