--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "www-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,23 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.2"
   },
   "devDependencies": {
+    "@types/eslint": "^8",
     "@types/prettier": "^2",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/styled-components": "^5",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "@vitejs/plugin-react": "^2.2.0",
-    "prettier": "2.7.1",
+    "eslint": "^8.26.0",
+    "eslint-plugin-react": "latest",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
   },
