feat: Info page category menu with using <NavLink>, edit color variable, set port num

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,3 +8,7 @@ packageExtensions:
   'styled-components@*':
     dependencies:
       'react-is': '^18.2.0'
+
+unsafeHttpWhitelist:
+  - "*.github.com"
+  - "github.com"
