--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/node": "^18.11.9",
     "dns": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8",
+    "@types/navermaps": "^3.6.0",
     "@types/prettier": "^2",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
