--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -27,7 +27,9 @@ jobs:
             ${{ runner.OS }}-
 
       - name: Create Environment File
-        run: echo ${{ secrets.NAVER_MAPS_ENV }} >> .env
+        run: |
+          echo ${{ secrets.NAVER_MAPS_ENV }} >> .env
+          cat .env
 
       - name: Install Dependencies # 의존성 설치
         run: yarn install
@@ -43,10 +45,30 @@ jobs:
           pwd
           ls dist
 
-      - uses: shallwefootball/s3-upload-action@master
+      # - uses: shallwefootball/s3-upload-action@master
+      #   with:
+      #     aws_key_id: ${{ secrets.AWS_ACCESS_KEY }}
+      #     aws_secret_access_key: ${{ secrets.AWS_SECRET_KEY }}
+      #     aws_bucket: ${{ secrets.AWS_S3_BUCKET }}
+      #     source_dir: 'dist'
+      #     destination_dir: ''
+      - name: S3 Sync
+        uses: jakejarvis/s3-sync-action@master
         with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_KEY }}
-          aws_bucket: ${{ secrets.AWS_S3_BUCKET }}
-          source_dir: 'dist'
-          destination_dir: ''
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          AWS_REGION: 'ap-northeast-2'
+          SOURCE_DIR: 'dist'
+
+      - name: CloudFront Cache Invalidation
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          AWS_DEFAULT_REGION: 'ap-northeast-2'
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id E37FOS401R4E40 \
+            --paths "/*"
