deploy: update env

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -31,8 +31,8 @@ jobs:
           NAVER_MAPS_ENV: ${{ secrets.NAVER_MAPS_ENV }}
           BASE_API_ENV: ${{ secrets.BASE_API_ENV }}
         run: |
-          echo ${{ NAVER_MAPS_ENV }} >> .env
-          echo ${{ BASE_API_ENV }} >> .env
+          echo $NAVER_MAPS_ENV >> .env
+          echo $BASE_API_ENV >> .env
 
       - name: Install Dependencies # 의존성 설치
         run: yarn install
