--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@types/node": "^18.11.9",
+    "aws-sdk": "^2.1277.0",
+    "axios": "^1.2.1",
     "dns": "^0.2.2",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
